; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_tsort.c_reverse_elements.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_tsort.c_reverse_elements.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8**, i64, i64)* @reverse_elements to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @reverse_elements(i8** %0, i64 %1, i64 %2) #0 {
  %4 = alloca i8**, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  store i8** %0, i8*** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  br label %8

8:                                                ; preds = %12, %3
  %9 = load i64, i64* %5, align 8
  %10 = load i64, i64* %6, align 8
  %11 = icmp ult i64 %9, %10
  br i1 %11, label %12, label %32

12:                                               ; preds = %8
  %13 = load i8**, i8*** %4, align 8
  %14 = load i64, i64* %5, align 8
  %15 = getelementptr inbounds i8*, i8** %13, i64 %14
  %16 = load i8*, i8** %15, align 8
  store i8* %16, i8** %7, align 8
  %17 = load i8**, i8*** %4, align 8
  %18 = load i64, i64* %6, align 8
  %19 = getelementptr inbounds i8*, i8** %17, i64 %18
  %20 = load i8*, i8** %19, align 8
  %21 = load i8**, i8*** %4, align 8
  %22 = load i64, i64* %5, align 8
  %23 = getelementptr inbounds i8*, i8** %21, i64 %22
  store i8* %20, i8** %23, align 8
  %24 = load i8*, i8** %7, align 8
  %25 = load i8**, i8*** %4, align 8
  %26 = load i64, i64* %6, align 8
  %27 = getelementptr inbounds i8*, i8** %25, i64 %26
  store i8* %24, i8** %27, align 8
  %28 = load i64, i64* %5, align 8
  %29 = add i64 %28, 1
  store i64 %29, i64* %5, align 8
  %30 = load i64, i64* %6, align 8
  %31 = add i64 %30, -1
  store i64 %31, i64* %6, align 8
  br label %8

32:                                               ; preds = %8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
